welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:12: error: ';' expected but 'return' found.
  } return T(num)
    ^