welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T= new Array[Int](num)
  var a: Int = 1
  var i: Int= 0
  for (c <- 1 to num) {
   for (j<- 1 to c) {
     if (j<num-1) {
       T(j)=a
     }
     
   }
  } return T(num)
}